# hcaptcha-hsj-hsw-reversed

./: .gitignore  LICENSE  README.md  WORKLOG.md  algorithm.py  deobf.js  deobf.py  fixslice_inverse.py  hsw_deobf.js  keyfetcher.py  keyfetcher_hsj.py  keyfetcher_hsw.py  keyfetcher_hsw_keys.py  log.py  package-lock.json  package.json  pyproject.toml  wasm_disasm.py  wasm_writer.py
.github/workflows/: ci.yml  refresh-keys.yml
data/: README.md  keys.json
deobfuscated/: MANIFEST.json  README.md  hsj_deobf.blobs.json  hsj_deobf.js  hsw_deobf.blobs.json
docs/: 00-architecture.md  01-hsj-bundle.md  02-hsw-bundle.md  03-deobfuscation.md  04-key-extraction.md  05-wasm-internals.md  06-fixslice32.md  07-wasm-patching.md  08-hsw-dispatch-table.md  09-hsw-keys-derivation.md  10-architecture-eras.md  11-hsw-function-map.md  12-hsw-complete-summary.md  13-hsw-rust-crates.md  14-cipher-investigation.md  15-final-status.md  16-function-inventory.md  17-irreducible-boundary.md  18-cipher-structure.md  19-ntoken-cipher-solved.md  hsw_function_labels.json
examples/: fetch_all.py
tests/: conftest.py  test_algorithm.py  test_data_schema.py  test_fixslice.py  test_hsw_crypto.py  test_ntoken_ctr.py  test_pow.py
tools/: README.md  backtest.py  backtest_report.json  backtest_report.md  capture_ntoken_key.py  cfb_brute.py  decrypt_ntoken_v4.py  exec_fn548.py  find_ntoken_aes.py  instrument_encrypt_entry.py  memdiff_ntoken.py  n_token_decrypt_probe.py  probe_missing_apis.py  probe_wbg_missing.py  probe_wbg_v2.py  recover_keystream.py  refine_hsw_labels.py  trace_keys.py
(+45 files in other folders)
